Tweaks to legibility and minor fixes

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -5,7 +5,7 @@
 	color: white;
 	font-weight: bold;
 	font-size: 60px;
-	padding-top: 20px;
+	padding-top: 40px;
 	margin-bottom: 40px;
 }
 
