--- a/client/src/components/Background/Background.module.css
+++ b/client/src/components/Background/Background.module.css
@@ -32,6 +32,7 @@
 	position: absolute;
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
+	transition: 1s;
 }
 
 .wifi_background>.signal_logo>svg{
